--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -35,7 +35,7 @@ $line-height: 30px;
 // Mobile phones
 $screen-sm-min: 599px;
 // Tablets and small desktops
-$screen-md-min: 992px;
+$screen-md-min: 826px;
 // Large tablets and desktops
 $screen-lg-min: 1024px;
 // Large desktops
